{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 33,
  "lineage": "d889c51e-d7c0-307a-9aef-03ee29777281",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foodstore-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:security-group/sg-002a46125ada37a11",
            "description": "Allow SSH traffic for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002a46125ada37a11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "foodstore-bastion-sg-tf",
            "name_prefix": "",
            "owner_id": "940514535313",
            "region": "ap-southeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "foodstore-bastion-sg-tf"
            },
            "tags_all": {
              "Name": "foodstore-bastion-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "sg-002a46125ada37a11",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foodstore-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:security-group/sg-04987e415e2e03d9c",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04987e415e2e03d9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere (for testing, replace with your IP)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from the load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065ea2bbeb0c2482f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "foodstore-instance-sg-tf",
            "name_prefix": "",
            "owner_id": "940514535313",
            "region": "ap-southeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "foodstore-instance-sg-tf"
            },
            "tags_all": {
              "Name": "foodstore-instance-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "sg-04987e415e2e03d9c",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_security_group.foodstore-lb-sg",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foodstore-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:security-group/sg-065ea2bbeb0c2482f",
            "description": "Allow HTTP traffic to the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065ea2bbeb0c2482f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "foodstore-lb-sg-tf",
            "name_prefix": "",
            "owner_id": "940514535313",
            "region": "ap-southeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "foodstore-lb-sg-tf"
            },
            "tags_all": {
              "Name": "foodstore-lb-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "sg-065ea2bbeb0c2482f",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foodstore-master-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:security-group/sg-0d1b6d9bc2ccdbb28",
            "description": "Allow SSH from bastion and internal traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1b6d9bc2ccdbb28",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from the bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002a46125ada37a11"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "foodstore-master-sg-tf",
            "name_prefix": "",
            "owner_id": "940514535313",
            "region": "ap-southeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "foodstore-master-sg-tf"
            },
            "tags_all": {
              "Name": "foodstore-master-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "sg-0d1b6d9bc2ccdbb28",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_security_group.foodstore-bastion-sg",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}